Fix R43 unit test source compatibility